# motion_control_ws

./: .gitignore
run/: axis_configuration.md  run.md  run_action.md
run/mmd/: test.mmd
src/motion_driver/: CMakeLists.txt  package.xml
src/motion_msgs/: CMakeLists.txt
src/motion_msgs/msg/: MotionStatus.msg
src/msgs_bridge/: CMakeLists.txt  package.xml
src/msgs_bridge/src/: scan_to_distance.cpp  status_converter.cpp
src/zmotion_driver/: CMakeLists.txt  package.xml
src/zmotion_driver/config/: params.yaml
src/zmotion_driver/include/zmotion_driver/: zmc_controller.h
src/zmotion_driver/lib/: zmotion_test
src/zmotion_driver/src/: enable_and_disable.cpp  get_address_and_atype.cpp  main.cpp  move_and_read.cpp  pub_dpos_and_mpos.cpp  zmc_controller.cpp  zmp_param.cpp
src/zmotion_driver/test/: get_and_set_limits.cpp  move_and_read.cpp  move_axis.cpp  move_some.cpp  test.cpp
